--- a/names.html
+++ b/names.html
@@ -11,5 +11,6 @@
     <h1>Magacyada ardayda baratay Git and GitHub</h1>
     <strong><h3>1. Muhammad Abdullahi | Class 402 </h3></strong>
     <strong><h3>2. Mohamed Osman| BIT27- </h3></strong>
+    <strong><h3>3. Ahmed Hassan Hersi | Class 401 </h3></strong>
 </body>
 </html>
